<resources>
    <string name="app_name">\u0020\u0020 ULTRA HD</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_banner_ad">bannerAdActivity</string>
    <string name="action_amp">AMP</string>
    <string name="action_search">Find</string>

    <string name="app_id">ca-app-pub-3882915167442181~1466855184</string>
    <string name="banner_ad_unit_id">ca-app-pub-3882915167442181/4580227391</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3882915167442181/1550739378</string>
    <string name="test_device">B2A4ACD09989A482DEBA3063377FC1F0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="mics">Mics</string>
    <string name="themes">Themes</string>
    <string name="settings_title">Settings</string>
    <string name="folder_name">Folder Name</string>
    <string name="time_place_holder">02:34</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play_icon">play_icon</string>
    <string name="themes_color">Theme Color</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share Application</string>
    <string name="play_pause">Play/Pause</string>


</resources>
