<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="0dp">

        <ImageView
            android:id="@+id/folderImage"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@drawable/border_radius"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/video_icon" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/play_icon"
            android:src="@drawable/video_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#22000000">

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:text="@string/time_place_holder"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="5dp"
        android:layout_marginTop="155dp"
        android:background="@android:color/background_light"
        android:maxLines="1"
        android:text="@string/folder_name" />

</RelativeLayout>