<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.houseofdoyens.ultrahdplayer20.SettingsActivity">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:id="@+id/displaySettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/brightness"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

        <SeekBar
            android:id="@+id/BrightnessBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/volumeSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/volumeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/volume"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/themeSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/themeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/themes"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/micsSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/micsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/mics"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    </LinearLayout>
</LinearLayout>
